--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.8"
 click = "^8.1.3"
 icmplib = "^3.0.3"
 jsonpickle = "^2.2.0"
+loguru = "^0.6.0"
 
 
 [tool.poetry.group.dev.dependencies]
